--- a/src/styles/detection.module.css
+++ b/src/styles/detection.module.css
@@ -13,9 +13,10 @@
 
 .url{
     width: 100%;
-    height: 3vh;
+    height: 4vh;
     padding: 1vw;
     margin: 2rem;
+    font-size: 1.5rem;
 }
 
 .submit{
@@ -29,5 +30,7 @@
 .writeup{
     width: 100%;
     height: 30vh;
-    font-size: 1.3rem;
+    font-size: 1.6rem;
+    padding: 1vw;
+
 }
