--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  scroll-behavior: smooth;
 }
 
 body {
     background-color: #2C1E4A;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    scroll-behavior: smooth;
 }
